Version 17.54 - 13 August 2016

- drakautologin:
  o add support for LXDM (mga#17616)
  o add support for SDDM (mga#17913)
- drakedm:
  o translate SDDM instead of KDM
- filesharelist:
  o fix Samba package name (samba-server -> samba)
- harddrake2:
  o em28xx drives TV cards, not webcam (mga#18995)

Version 17.53 - 31 July 2016

- diskdrake:
  o first usable sector is LBA34 for GPT
  o respect used scheme when clearing a disk
    (ie do not switch from gpt to dos scheme on small disk)
- drakboot:
  o fix .old backup for grub2's grub.cfg
- authentication: add support for sha256/sha512 and default to sha512

Version 17.52 - 17 July 2016

- drakboot:
  o fix not being able to edit default grub2 cmdline (mga#18952)

Version 17.51 - 12 July 2016

- diskdrake:
  o don't offer to format RAID or BIOS boot partition
  o fix clearing an already filled GPT disk
  o make clear a BIOS boot partition cannot have a mount point
  o make error about BIOS boot partition more explicit about
    its purpose and that it must be created (mga#18923)

Version 17.50 - 8 July 2016

- diskdrake:
  o display a wait message when adding a PV to VG

Version 17.49 - 6 July 2016

- diskdrake:
  o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
- recognize new kernel-4.7 drivers

Version 17.48 - 4 July 2016

- diskdrake:
  o do not offer to check for bad blocks on btrfs (mga#12393)
  o do not warn about no bootloader can boot LVM as grub2 can (mga#9426)
  o do not warn about no bootloader can boot RAID[^1] as grub2 can (mga#11324)
  o enable bad blocks checking on JFS
- drakboot:
  o allow installing grub2 on XFS /
  o make clear grub2 is installed on ESP under UEFI
- finish-install:
  o drop reload-dm hack
  o drop gnome-reboot hack

Version 17.47 - 30 June 2016

- recognize some missing wireless drivers (mga#16768)
- diskdrake:
  o fix being able to create vfat on UEFI (mga#15698)

Version 17.46 - 24 June 2016

- drakboot: