@@ -1,3 +1,5 @@
+- sync nonfree firmware list with kernel-4.7
+
 Version 17.55 - 13 August 2016
 
 - New left background for Mageia 6 RC
