@@ -1,3 +1,5 @@
+- sync nonfree firmware list with kernel-4.7
+
 Version 17.54 - 13 August 2016
 
 - drakautologin:
